apps/soundreview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soundreview
  namespace: soundreview
spec:
  selector:
    app: soundreview
  ports:
    - port: 80
      targetPort: 3000
